syntax = "proto3";

package resources.internet;

import "buf/validate/validate.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/internet;internet";

message TLD {
  uint64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  string name = 5 [(buf.validate.field).string = {
    min_len: 2
    max_len: 24
  }];
  bool internal = 6;
  optional int32 creator_id = 7;
}

message Domain {
  uint64 id = 1;
  resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  optional resources.timestamp.Timestamp deleted_at = 4;
  uint64 tld_id = 5;
  optional TLD tld = 6;
  bool active = 7;
  string name = 8 [(buf.validate.field).string.max_len = 128];
  optional string transfer_code = 9 [(buf.validate.field).string = {
    len: 10
    pattern: "^[0-9A-Z]{6}$"
  }];
  optional string approver_job = 10;
  optional int32 approver_id = 11;
  optional string creator_job = 12;
  optional int32 creator_id = 13;
}
